--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore .C-BeerSong/blob/main/BeerSong/BeerSong.sln
+      run: dotnet restore .C-BeerSong/blob/main/BeerSong.sln
     - name: Build
-      run: dotnet build .BeerSong/BeerSong.sln --no-restore
+      run: dotnet build .C-BeerSong/blob/main/BeerSong.sln --no-restore
     - name: Test 
-      run: dotnet test  .C-BeerSong/blob/main/BeerSong/BeerSong.csproj --no-build --verbosity normal
+      run: dotnet test  .C-BeerSong/blob/main/BeerSong.csproj --no-build --verbosity normal
